--- a/index.html
+++ b/index.html
@@ -10,6 +10,33 @@
 <div id="start">
   <img src="logo.png" alt="WRK logo" class="logo">
   <h1>WRK Airport Codes</h1>
+
+  <h3>Choose game type</h3>
+  <div id="gameTypes">
+    <label>
+      <input type="radio" name="gameType" checked onclick="setGameType('code-to-city')">
+      Guess the city (IATA → City)
+    </label><br>
+
+    <label>
+      <input type="radio" name="gameType" onclick="setGameType('city-to-code')">
+      Guess the IATA code (City → IATA)
+    </label>
+  </div>
+
+  <h3>Choose mode</h3>
+  <div id="modes">
+    <button onclick="setMode('train')">Training mode</button>
+    <button onclick="setMode('exam')">Exam mode</button>
+  </div>
+
+  <div id="modules"></div>
+
+  <button onclick="startGame()">Start</button>
+</div>
+
+  <img src="logo.png" alt="WRK logo" class="logo">
+  <h1>WRK Airport Codes</h1>
   <div id="modes">
     <button onclick="setMode('train')">Training mode</button>
     <button onclick="setMode('exam')">Exam mode</button>
