--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <div id="end" class="hidden">
   <h2>Time's up!</h2>
   <p id="score"></p>
-  <button onclick="location.reload()">Restart</button>
+  <button onclick="resetGame()">Restart</button>
 </div>
 
 <script src="app.js"></script>
